[package]
name = "doken"
version = "0.3.1"
description = "Tool for getting tokens from OAuth 2.0/OpenID Connect providers"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = { version = "1.0.96" }
clap = { version = "4.2.2", features = ["env", "derive"] }
tokio = { version = "1.28.0", features = ["full"] }
home = "0.5.3"
url = "2.2.2"
async-trait = "0.1.57"
mime = "0.3.16"
oauth2 = { version = "4.3.0", features = ["reqwest"] }
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.10.0"
form_urlencoded = "1.1.0"
rpassword = "7.2.0"
anyhow = "1.0.70"
thiserror = "1.0.40"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
futures = "0.3.28"
base64 = "0.21.0"
multer = "2.1.0"
