[package]
name = "doken"
version = "0.6.2"
description = "Tool for getting tokens from OAuth 2.0/OpenID Connect providers"
edition = "2021"
repository = "https://github.com/RiddleMan/doken"
authors = ["Artur Ptaszek <artur@ptaszek.dev>"]

[package.metadata.wix]
upgrade-guid = "EE97BA4C-8E20-4136-A4E7-9994FCB22838"
path-guid = "8705AAFD-B589-4D5A-950B-83399E700532"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.96" }
clap = { version = "4.5.1", features = ["env", "derive"] }
tokio = { version = "1.36.0", features = ["full"] }
home = "0.5.9"
url = "2.2.2"
async-trait = "0.1.77"
oauth2 = { version = "4.3.0", features = ["reqwest"] }
dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11.2"
form_urlencoded = "1.2.1"
rpassword = "7.2.0"
anyhow = "1.0.80"
thiserror = "1.0.40"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
futures = "0.3.30"
base64 = "0.22.0"
toml = "0.8.8"
serde_variant = "0.1.2"
rand = "0.8.5"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "RiddleMan/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
