[package]
name = "doken"
version = "0.8.0"
description = "Tool for getting tokens from OAuth 2.0/OpenID Connect providers"
edition = "2024"
repository = "https://github.com/RiddleMan/doken"
authors = ["Artur Ptaszek <artur@ptaszek.dev>"]

[package.metadata.wix]
upgrade-guid = "EE97BA4C-8E20-4136-A4E7-9994FCB22838"
path-guid = "8705AAFD-B589-4D5A-950B-83399E700532"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
clap = { version = "4.5.3", features = ["env", "derive"] }
tokio = { version = "1.36.0", features = ["full"] }
home = "0.5.9"
url = "2.5.0"
async-trait = "0.1.78"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11.3"
form_urlencoded = "1.2.1"
rpassword = "7.3.1"
anyhow = "1.0.81"
thiserror = "2.0.0"
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, rev = "b827ad882a209cbd098bd51ee38a59723174cde2"}
futures = "0.3.30"
base64 = "0.22.0"
toml = "0.8.12"
serde_variant = "0.1.2"
rand = "0.9.0"
file-guard = "0.2.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
tempfile = "3.10.1"
testcontainers = { version = "0.23.0" }
keycloak = "26.0.0"
lazy_static = "1.4.0"
serial_test = "3.0.0"
